2008-03-13  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/AdjustVisibility.cs: don't adjust enums.

2008-02-18  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (inst-%, gac-%): Fix dependencies.

2008-02-17  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile: Improve.  Update to new net_2_1 profiles.  Specify
	more dependencies.  Do work only when necessary.
	* Descriptors/smcs.xml: Add CompilerCallableEntryPoint.

2008-02-01  Jb Evain  <jbevain@novell.com>

	* Makefile: remove System.Core temporary hack.

2008-02-01  Jb Evain  <jbevain@novell.com>

	* Makefile, Descriptors/System.Core.xml:
	protect some internals of System.Core as apparently
	the masterinfos are somewhat wrong.

2007-10-26  Jb Evain  <jbevain@novell.com>

	* Makefile: disable the `always build the tuner` as per
	Paolo's suggestion. Need to use the build mecanism from now.

2007-10-26  Jb Evain  <jbevain@novell.com>

	* Makefile: activate the InjectAttributes step.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectAttributes.cs: inject security attributes
	defined in the public api.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectAttributes.cs: infrastructure for
	the attribute injector.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/PrintStatus.cs: print which items
	have been internalized if the parameter `display_internalized`
	is set to true.

	* Makefile: define parameter `display_internalized` and set it
	to false. Set it explicitely to true if you want a detailed log
	about which metadata items have been internalized.

2007-10-25  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/TunerAnnotations.cs
	* Mono.Tuner/AdjustVisibility.cs:
		Annotate the items that have been internalized
		for later use.

	* Makefile: always rebuild Mono.Tuner.dll for now.

2007-09-04  Jb Evain  <jbevain@novell.com>

	* masterinfos/*.info added, so we don't have to download them.
	* Makefile: use directly the .info files from the repo.
